<resources>
    <string name="app_name">E-Learning App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="admin">Admin</string>
    <string name="help">Help</string>

    <string name="confirm">Confirm</string>
    <string name="upload">Upload</string>
    <string name="choose_file">Choose File</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>

    <string name="name">Username</string>
    <string name="teacher_name">Teacher Name</string>
    <string name="file_name">File Name</string>

    <string name="subject_name">Subject</string>
    <string name="cannot_be_empty">Cannot Be Empty</string>
    <string name="login_info">Login Info</string>
    <string name="copied">Copied</string>
    <string name="grade">Grade</string>
    <string name="done">Done</string>

    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="profile">Profile</string>
    <string name="cannot_read_file">Cannot Read File</string>

    <string name="classes">Classes</string>
    <string name="assignments">Assignments</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="choose_file_error">Please select a file</string>


    <string name="add_teacher">Add Teacher</string>
    <string name="teacher_added">Teacher Added</string>
    <string name="student_name">Student Name</string>

    <string name="upload_file">Upload File</string>

    <string name="add_student">Add Student</string>
    <string name="student_added">Student Added</string>


    <string name="add_classroom">Create Class</string>
    <string name="classroom_added">Classroom Created</string>

    <string name="view_teachers">View Teachers</string>
    <string name="view_students">View Students</string>
    <string name="view_classes">View Classes</string>
    <string name="send">Send</string>
    <string name="send_message">Write a new message</string>

    <string name="manage_classes">Manage Classes</string>
    <string name="create_classroom">Create Classroom</string>
    <string name="classroom_created">Classroom Created</string>
    <string name="classroom_name">Classroom Name</string>
    <string name="classroom">Classroom</string>
    <string name="description">Description</string>
    <string name="description_arg">Description: %1$s</string>
    <string name="classroom_name_arg">Classroom Name: %1$s</string>
    <string name="members_count">Members Count: %1$d</string>

    <string name="files">Files</string>
    <string name="file_selected">File Selected</string>

    <string name="submissions_count">Submissions: %1$d</string>

    <string name="members_arg">%1$d Members</string>
    <string name="one_member">1 Member</string>
    <string name="ago_sample">3m ago</string>
    <string name="members">Members</string>

    <string name="file_download">Downloading File</string>

    <string name="instructor">Instructor: %1$s</string>
    <string name="no_instructor">No Instructor</string>

    <string name="user_classes">Classes this user is in</string>
    <string name="all_classes">All Classes</string>

    <string name="number_sample">#1</string>
    <string name="number_arg">#%1$d</string>
    <string name="new_assignment">New Assignment</string>
    <string name="comment_hint">Comment (Optional)</string>
    <string name="new_assignment_arg">New assignment in %1$s</string>


    <string name="invalid_user">Invalid Login</string>
    <string name="invalid_email">Invalid Login</string>
    <string name="view">View</string>
    <string name="submissions">Submissions</string>
    <string name="submissions_arg">%1$d Submissions</string>

    <string name="assignment_submission">Assignment submission</string>
    <string name="assignment_name_submission">%1$s submission</string>

    <string name="submissions_hint">%1$s\nTap an item to download</string>
    <string name="tap_to_download_arg">%1$s (tap to download)</string>

    <string name="download_submission">Download Your Submission</string>

    <string name="delete_assignment">Delete Assignment</string>
    <string name="delete_assignment_confirm">Assignment will be deleted along all submissions. Continue?</string>

    <string name="text_sample">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="logout">Logout</string>
    <string name="logout_confirm">Are you sure you want to logout?</string>

    <string name="delete_user">Delete User</string>
    <string name="view_users">View Users</string>
    <string name="delete_user_confirm">Are you sure you want to delete %1$s?</string>
    <string name="delete_classroom">Delete Class</string>

    <string name="name_details">Name: %1$s</string>
    <string name="subject_details">Subject: %1$s</string>
    <string name="grade_details">Grade: %1$s</string>
    <string name="email_details">Email: %1$s</string>
    <string name="password_details">Password: %1$s</string>
    <string name="teachers_count">Number of Teachers: %1$d</string>
    <string name="students_count">Number of Students: %1$d</string>
    <string name="classes_count">Number of Classes: %1$d</string>

    <string name="user_profile_arg">%1$s\'s Profile</string>

    <string name="empty_teachers">No teachers found! Consider adding some.</string>
    <string name="empty_students">No students found! Consider adding some.</string>
    <string name="empty_classes">No Classes found! Consider adding some.</string>

    <string name="login_details">Email: %1$s \n Password: %2$s</string>


    <string name="uploading_pic">Uploading Image</string>
    <string name="uploading_file">Uploading File</string>
    <string name="cannot_upload">Cannot Upload</string>
    <string name="file_sent">File Sent</string>
    <string name="classroom_files">Classroom Files</string>


    <string name="cannot_submit_again">Cannot Submit Again!</string>

    <string name="change_img">Change Picture</string>
    <string name="change_img_confirm">Are you sure you want to change your profile picture?</string>
    <string name="single_letter_sample">A</string>

    <string name="title">Title</string>
    <string name="open_date">Open Date</string>
    <string name="due_date">Due Date</string>

    <string name="same_day_choose_duration">Open date and deadline cannot be at the same time</string>
    <string name="assignment_time">Allowed time (in hours)</string>

    <string name="assignment_file">Additional files or resources (Optional)</string>
    <string name="assignment_sent">Assignment Sent</string>

    <string name="title_arg">Title: %1$s</string>
    <string name="content_arg">Content: %1$s</string>

    <string name="title_arg_with_class">Class: %1$s\nAssignment Title: %2$s</string>

    <string name="open_date_arg">Open Date: %1$s</string>
    <string name="due_date_arg">Due Date: %1$s\nAssignment Deadline: %2$s</string>

    <string name="assignment_due_arg_min">Assignment due by %1$d minutes</string>
    <string name="assignment_due_arg_hour">Assignment due by %1$d hours</string>
    <string name="assignment_due_arg_day">Assignment due by %1$d days</string>

    <string name="status_online">Online</string>
    <string name="status_offline">Offline</string>
    <string name="no_classes">You are not in any classes yet!</string>
    <string name="no_posts">No one has sent any messages yet</string>
    <string name="no_notifications">No Notifications</string>
    <string name="no_files">The Instructor can post files here</string>
    <string name="private_message">Private Message</string>
    <string name="private_chat">Private Chat</string>
    <string name="no_assignments">No Assignments in this class</string>

    <string name="no_file_assignment">No attached resources</string>
    <string name="no_assignments_yet">No Assignments</string>

    <string name="delete_chat">Delete Chat</string>
    <string name="delete_chat_confirm">Are you sure you want to delete this chat?</string>

    <string name="new_submission">New submission for %1$s</string>
    <string name="new_submission_title">New Submission</string>


    <string name="new_mention">Someone mentioned you in %1$s</string>
    <string name="new_mention_title">New Mention</string>
    <string name="view_profile_hint">Tap to view a member\'s profile</string>

    <string name="new_file">A new file was added in %1$s</string>
    <string name="new_file_title">New File</string>


    <string name="about">About</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="change_password">Change Password</string>
    <string name="clear_cache_done">Cache Cleared</string>
    <string name="ok">OK</string>
    <string name="password_changed">Password changed successfully</string>


    <string name="about_message">Write about app here</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>

    <string name="password_too_short">Password too short</string>


    <string name="notification_delete">Delete Notification</string>
    <string name="notification_delete_confirm">Are you sure you want to delete this notification?</string>

    <string-array name="chat_actions">
        <item>Cancel</item>
        <item>Delete Chat</item>
        <item>View Profile</item>
    </string-array>

    <string-array name="week_days">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>


    <!-- To add a new question and answer
         simply add a new item in each array -->

    <string-array name="questions">
        <item>How do I sign out?</item>
        <item>How do change my password?</item>
        <item>I don\'t know my current password, what do I do?</item>
        <item>How can I see other class members?</item>
        <item>How can I mention someone in the classroom chat?</item>
        <item>Who can see my profile?</item>

    </string-array>


    <string-array name="answers">
        <item>You can sign out from the app settings</item>
        <item>To change your password, open settings, tap Change Password,\n type in your old password and your new password</item>
        <item>You should contact your organization administrator</item>
        <item>In your classes page, long tap a class item to view all members of that class</item>
        <item>In the classroom chat, start by typing the first letter of their name, a menu will appear and you can select who you want to mention.</item>
        <item>Other class members and teachers can see your profile.</item>

    </string-array>
</resources>
