<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.myclass.school.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/loginNow"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/goToAdmin"
            app:destination="@id/adminFragment" />
        <action
            android:id="@+id/goToProfile"
            app:destination="@id/profileFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.myclass.school.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/adminFragment"
        android:name="com.myclass.school.AdminFragment"
        android:label="@string/admin"
        tools:layout="@layout/fragment_admin" >
        <action
            android:id="@+id/viewUsersNow"
            app:destination="@id/viewUsersFragment" />
    </fragment>
    <fragment
        android:id="@+id/viewUsersFragment"
        android:name="com.myclass.school.ViewUsersFragment"
        android:label="@string/view_users"
        tools:layout="@layout/fragment_view_users">
        <argument
            android:name="viewWhat"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.myclass.school.ChatFragment"
        android:label="@string/chat"
        tools:layout="@layout/fragment_chat" />
    <fragment
        android:id="@+id/classesFragment"
        android:name="com.myclass.school.ClassesFragment"
        android:label="@string/classes"
        tools:layout="@layout/fragment_classes" />
    <fragment
        android:id="@+id/assignmentsFragment"
        android:name="com.myclass.school.AssignmentsFragment"
        android:label="@string/assignments"
        tools:layout="@layout/fragment_assignments" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.myclass.school.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.myclass.school.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>