<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/item_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="17sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/item_details_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_subject_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/subject_name"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_user_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/item_user_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/copy_login_details"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableEnd="@drawable/ic_content_copy"
                android:drawablePadding="8dp"
                android:text="@string/copy"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/user_edit_item"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_edit"
                android:text="@string/edit"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/user_delete_item"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_delete"
                android:text="@string/delete"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/manage_classes_item"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/manage_classes"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <View style="@style/view_divider_style" />


</androidx.appcompat.widget.LinearLayoutCompat>