<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/manage_classes"
        android:textColor="@color/black_night"
        android:textSize="18sp"
        android:textStyle="bold" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <View style="@style/view_divider_style" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/all_classes"
            android:textColor="@color/black_night" />

        <View style="@style/view_divider_style" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_classes_rv"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp" />

        <View style="@style/view_divider_style" />


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="4dp"
            android:text="@string/user_classes"
            android:textColor="@color/black_night" />

        <View style="@style/view_divider_style" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_classes_rv"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="8dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_confirm_button"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="1"
        android:text="@string/done"
        android:textColor="@color/lynx_white"
        android:textSize="17sp"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>